Modificación doc req

--- a/documentacionrequerida.html
+++ b/documentacionrequerida.html
@@ -90,7 +90,8 @@
         <li class="documentacion__inicio__requerida">Autorización de SENASA.</li>
         <li class="documentacion__inicio__requerida">Canil y/o contenedor correspondiente al tipo de animal..</li>
         <li class="documentacion__inicio__requerida">Que la mascota tenga como mínimo 60 (sesenta) días de vida para
-          perros y gatos en Argentina y 120 días en el resto de los países</li>
+          perros y gatos en Argentina y 120 días en el resto de los países.</li>
+          <li class="documentacion__inicio__requerida">Bozal si se considera raza peligrosa.</li>
       </ul>
 
       <h2>Ingreso al país</h2>
