--- a/Referencias.html
+++ b/Referencias.html
@@ -192,7 +192,7 @@
                         alt="">
                     <div class="tarjeta__titulo">
                         <div class="tarjeta__parrafo">
-                            <h3>Dueño de Rolo</h3>
+                            <h3>Dueño de Nugaton</h3>
                             <p>Muy calidos y completos, servicio de exelencia. Trajeron a a mi Rolo sano y salvo, lo cuidaron como si fuera su hijo. GRACIAS TOTALES!</p>
                         </div>
                     </div>
