Modificación Contacto, Index

--- a/contacto.html
+++ b/contacto.html
@@ -83,7 +83,7 @@
     </div>
   </header>
     <main>
-        <div class="container">
+        <div class="container" style="padding: 70px;">
           <h2>Contacto</h2>
           <div class="row">
             <form class="needs-validation" novalidate>
@@ -157,6 +157,42 @@
           </div>
         </div>
     </main>
+    <div class="container">
+      <div class="row">
+          <div class="col-sm-6">
+              <div class="panel-pane pane-area-contacto">
+                  <div class="pane-content">
+                      <h2><strong>CONTACTO</strong></h2>
+
+<p><span style="font-size:12px"><strong>Sede Central</strong><br />
+Francisco Narciso de Laprida 30, Villa Martelli, Prov. de Buenos Aires<br />
+TEL: +54 11 5129 5699</span></p>
+
+<p><span style="font-size:12px"><strong>Para env&iacute;o de facturaci&oacute;n</strong><br />
+presupuesto@trasladodemascotas.com<br />
+Esta cuenta es v&aacute;lida para la recepci&oacute;n de comprobantes.</span></p>
+
+<p><span style="font-size:12px"><strong>E-MAIL de contacto</strong><br />
+info@trasladodemascotas.com</span></p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6">
+              <div class="panel-pane pane-texto">
+                  <div class="pane-content">
+                      <div class="">
+                          <p>
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13618.730966150759!2d-64.18332754999999!3d-31.422866000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1626651709108!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      
+  </div>
+    
 
   </div>
   <footer>
