--- a/contacto.html
+++ b/contacto.html
@@ -14,186 +14,172 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="./css/estilo.css" rel="stylesheet" type="text/css">
-
 </head>
-
-
 <body>
-
   <div id="contenido">
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(138, 170, 101);">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-              aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="Nuestros traslados.html">Nuestros Traslados <span
-                              class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="Referencias.html">Referencias</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="informacionlegal.html"
-                          id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                          aria-expanded="false">
-                          Información
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="documentacionrequerida.html">Info Útil</a>
-                          <a class="dropdown-item" href="contacto.html">Contacto</a>
-                      </div>
-                  </li>
-              </ul>
-          </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Referencias.html">Referencias</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="informacionlegal.html" id="navbarDropdownMenuLink"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Información
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="documentacionrequerida.html">Info Útil</a>
+                <a class="dropdown-item" href="contacto.html">Contacto</a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="container p-0 m-0">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="imagenes/bg_destinos.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="imagenes/perrito2.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="imagenes/perrito3.jpg" alt="Third slide">
-                </div>
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="imagenes/bg_destinos.jpg" alt="First slide">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
-  </header>
-    <main>
-        <div class="container" style="padding: 70px;">
-          <h2>Contacto</h2>
-          <div class="row">
-            <form class="needs-validation" novalidate>
-              <div class="form-row">
-                <div class="col-md-4 mb-3">
-                  <label for="validationCustom01">Nombre </label>
-                  <input type="text" class="form-control" id="validationCustom01" placeholder="First name"
-                    value="Nombre" required>
-                  <div class="valid-feedback">
-
-                  </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                  <label for="validationCustom02">Apellido</label>
-                  <input type="text" class="form-control" id="validationCustom02" placeholder="Last name"
-                    value="Apellido" required>
-                  <div class="valid-feedback">
-
-                  </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                  <label for="validationCustomUsername">Correo electronico</label>
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="inputGroupPrepend">@</span>
-                    </div>
-                    <input type="text" class="form-control" id="validationCustomUsername"
-                      placeholder="Correo electronico" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                      Por favor coloque un correo válido
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-row">
-                <div class="col-md-6 mb-3">
-                  <label for="validationCustom03">Ciudad</label>
-                  <input type="text" class="form-control" id="validationCustom03" placeholder="Ciudad" required>
-                  <div class="invalid-feedback">
-                    Por favor coloque una ciudad válida.
-                  </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                  <label for="validationCustom04">Provincia</label>
-                  <input type="text" class="form-control" id="validationCustom04" placeholder="Provincia" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid state.
-                  </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                  <label for="validationCustom05">Código Postal</label>
-                  <input type="text" class="form-control" id="validationCustom05" placeholder="Código Postal" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid zip.
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                  <label class="form-check-label" for="invalidCheck">
-                    Acepta los términos y condiciones
-                  </label>
-                  <div class="invalid-feedback">
-                    You must agree before submitting.
-                  </div>
-                </div>
-              </div>
-              <button class="btn btn-primary" type="submit">Enviar formulario</button>
-            </form>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="imagenes/perrito2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="imagenes/perrito3.jpg" alt="Third slide">
+            </div>
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
+      </div>
+    </header>
+    <main>
+      <div class="container" style="padding: 70px;">
+        <h2>Contacto</h2>
+        <div class="row">
+          <form class="needs-validation" novalidate>
+            <div class="form-row">
+              <div class="col-md-4 mb-3">
+                <label for="validationCustom01">Nombre </label>
+                <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Nombre"
+                  required>
+                <div class="valid-feedback">
+
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label for="validationCustom02">Apellido</label>
+                <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Apellido"
+                  required>
+                <div class="valid-feedback">
+
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label for="validationCustomUsername">Correo electronico</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                  </div>
+                  <input type="text" class="form-control" id="validationCustomUsername" placeholder="Correo electronico"
+                    aria-describedby="inputGroupPrepend" required>
+                  <div class="invalid-feedback">
+                    Por favor coloque un correo válido
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-6 mb-3">
+                <label for="validationCustom03">Ciudad</label>
+                <input type="text" class="form-control" id="validationCustom03" placeholder="Ciudad" required>
+                <div class="invalid-feedback">
+                  Por favor coloque una ciudad válida.
+                </div>
+              </div>
+              <div class="col-md-3 mb-3">
+                <label for="validationCustom04">Provincia</label>
+                <input type="text" class="form-control" id="validationCustom04" placeholder="Provincia" required>
+                <div class="invalid-feedback">
+                  Please provide a valid state.
+                </div>
+              </div>
+              <div class="col-md-3 mb-3">
+                <label for="validationCustom05">Código Postal</label>
+                <input type="text" class="form-control" id="validationCustom05" placeholder="Código Postal" required>
+                <div class="invalid-feedback">
+                  Please provide a valid zip.
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                <label class="form-check-label" for="invalidCheck">
+                  Acepta los términos y condiciones
+                </label>
+                <div class="invalid-feedback">
+                  You must agree before submitting.
+                </div>
+              </div>
+            </div>
+            <button class="btn btn-primary" type="submit">Enviar formulario</button>
+          </form>
+        </div>
+      </div>
     </main>
     <div class="container">
       <div class="row">
-          <div class="col-sm-6">
-              <div class="panel-pane pane-area-contacto">
-                  <div class="pane-content">
-                      <h2><strong>CONTACTO</strong></h2>
-
-<p><span style="font-size:20px"><strong>Sede Central</strong><br />
-Francisco Narciso de Laprida 30, Villa Martelli, Prov. de Buenos Aires<br />
-TEL: +54 11 5129 5699</span></p>
-
-<p><span style="font-size:20px"><strong>Para env&iacute;o de facturaci&oacute;n</strong><br />
-presupuesto@trasladodemascotas.com<br />
-Esta cuenta es v&aacute;lida para la recepci&oacute;n de comprobantes.</span></p>
-
-<p><span style="font-size:20px"><strong>E-MAIL de contacto</strong><br />
-info@trasladodemascotas.com</span></p>
-                  </div>
-              </div>
+        <div class="col-sm-6">
+          <div class="panel-pane pane-area-contacto">
+            <div class="pane-content">
+              <h2><strong>CONTACTO</strong></h2>
+              <p><span style="font-size:20px"><strong>Sede Central</strong><br />
+                  Francisco Narciso de Laprida 30, Villa Martelli, Prov. de Buenos Aires<br />
+                  TEL: +54 11 5129 5699</span></p>
+              <p><span style="font-size:20px"><strong>Para env&iacute;o de facturaci&oacute;n</strong><br />
+                  presupuesto@trasladodemascotas.com<br />
+                  Esta cuenta es v&aacute;lida para la recepci&oacute;n de comprobantes.</span></p>
+              <p><span style="font-size:20px"><strong>E-MAIL de contacto</strong><br />
+                  info@trasladodemascotas.com</span></p>
+            </div>
           </div>
-          <div class="col-sm-6">
-              <div class="panel-pane pane-texto">
-                  <div class="pane-content">
-                      <div class="">
-                          <p>
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13618.730966150759!2d-64.18332754999999!3d-31.422866000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1626651709108!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
-                          </p>
-                      </div>
-                  </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="panel-pane pane-texto">
+            <div class="pane-content">
+              <div class="">
+                <p>
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13618.730966150759!2d-64.18332754999999!3d-31.422866000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1626651709108!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
+                </p>
               </div>
+            </div>
           </div>
+        </div>
       </div>
-
-      
-  </div>
-    
-
+    </div>
   </div>
   <footer>
     <div class="footer__redsocial">
@@ -214,7 +200,6 @@ info@trasladodemascotas.com</span></p>
       <li class="breadcrumb-item active" aria-current="page">Contacto</li>
     </ol>
   </nav>
-
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
